--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.42.0",
+    "@tanstack/react-router": "^1.26.16",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
@@ -20,6 +21,8 @@
     "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
+    "@tanstack/router-devtools": "^1.26.16",
+    "@tanstack/router-vite-plugin": "^1.26.16",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -30,6 +33,5 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
-  },
-  "packageManager": "yarn@4.1.1"
+  }
 }
