--- a/package.json
+++ b/package.json
@@ -7,18 +7,22 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate_types": "supabase gen types typescript --project-id=oyjjpfhnrhbaedwgohsa > src/types/supabase.ts"
   },
   "dependencies": {
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.42.0",
+    "@tanstack/react-query": "^5.29.0",
     "@tanstack/react-router": "^1.26.16",
     "autoprefixer": "^10.4.19",
+    "formik": "^2.4.5",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@tanstack/router-devtools": "^1.26.16",
@@ -31,6 +35,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "supabase": "^1.153.4",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
