--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.3",
+    "react-number-format": "^5.3.4",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@tanstack/router-devtools": "^1.26.16",
     "@tanstack/router-vite-plugin": "^1.26.16",
     "@types/react": "^18.2.66",
@@ -36,6 +37,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "supabase": "^1.153.4",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
