--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate_types": "supabase gen types typescript --project-id=oyjjpfhnrhbaedwgohsa > src/types/supabase.ts"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.42.0",
@@ -18,6 +19,7 @@
     "@tanstack/react-router": "^1.26.16",
     "autoprefixer": "^10.4.19",
     "formik": "^2.4.5",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,6 +30,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tanstack/router-devtools": "^1.26.16",
     "@tanstack/router-vite-plugin": "^1.26.16",
+    "@types/lodash": "^4.17.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
